# EmotionDetector

./: pyproject.toml  server.py  test_emotion_detection.py
EmotionDetection/: emotion_detection.py
